--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
   {{ current }}
   </section>
  
-  <section>禁止转载</a> | <a href="https://rsp.ink/1970/01/01/copyright.html">著作权声明</a></section>
+  <section>禁止转载</a> | <a href="https://rsp.ink/1970/01/01/copyright.html">著作权声明</a> | <a href="/rss">RSS订阅</a></section>
   <!--
     <section>Powered by RSP Studio & LIQUID PLUS</a> | <a href="http://www.miitbeian.gov.cn">粤ICP备18148945号</a></section>
   -->
