--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,15 @@
 <header class="g-header">
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LHH8BKX39V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LHH8BKX39V');
+</script>
+    
     <div class="g-logo">
       <a href="{{ "/" | relative_url }}"></a>
     </div>
